# pleb

./: .gitignore  CONTRIBUTING.md  DOCS_GENERATION.md  LICENSE  README.md  ROADMAP.md  TODO_incremental_pipeline.md  pipeline.yml  pyproject.toml  ruff.toml
.github/: pull_request_template.md
configs/: README.md  example.json  example.toml  force_everything.toml  test_all_steps.toml
data_combination_pipeline/: __init__.py  __main__.py  cli.py  config.py  dataset_fix.py  fit_robust.py  fixdataset_legacy.py  git_tools.py  kepler_orbits.py  logging_utils.py  outlier_qc.py  param_scan.py  parsers.py  pipeline.py  plotting.py  pulsar_analysis.py  reports.py  system_flag_inference.py  tempo2.py  tim_reader.py  utils.py
docs/: Makefile  api.rst  cli.rst  concepts.rst  conf.py  config_layout.rst  configuration.rst  configuration_reference.rst  developer_internals.rst  examples.rst  faq.rst  flow_diagrams.rst  flow_diagrams_mermaid.md  full_settings_catalog.rst  gui.rst  index.rst  ingest.rst  installation.rst  modes.rst  operator_quickstart.rst  optimize.rst  optimize_playbook.rst  optimize_scoring.md  overview.rst  pleb_deep_dive.rst  qc_review.rst  quickstart.rst  references.rst  release_notes.rst  release_quality_report.md  running_modes.rst  scientist_tuning.rst  single_pulsar_playbook.rst  ux_wrapper.rst
pleb/: __init__.py  __main__.py  backend_alignment.py  cli.py  compat.py  config.py  config_io.py  dataset_fix.py  fit_robust.py  fixdataset_legacy.py  git_tools.py  ingest.py  kepler_orbits.py  legacy_fixdataset.py  logging_utils.py  outlier_qc.py  param_scan.py  parsers.py  pipeline.py  plotting.py  public_release_compare.py  pulsar_analysis.py  qc_report.py  qc_review.py  reference_dataset_tools.py  release_quality_report.py  reports.py  review_synthesis.py  run_report.py  system_flag_inference.py  system_tables.py  tempo2.py  tim_reader.py  tim_utils.py  utils.py  whitenoise_integration.py  workflow.py
scripts/: audit_system_flags.py  build_release_from_pleb_outputs.py  diagnose_qc.py  generate_plk_setup.py  generate_release_quality_report.py  generate_settings_catalog.py  make_human_review_pack.py  make_review_synthesis.py  model_check.py  pleb_gui.py  pleb_qc_review.py  pleb_qc_review_fast_test.py  pleb_qc_review_matplotlib.py  plot_features.py  plot_qc_summary.py  plot_styles.py  plot_transients.py  run_qc.py  show_active_pqc_workers.sh  verify_ingest_tims.py
singularity/: README.md  build_pleb_sif.sh  pleb.def  pleb.def.in
tests/: conftest.py  test_audit_system_flags.py  test_backend_alignment.py  test_backend_keys.py  test_bad_measurements.py  test_cli_modes.py  test_config.py  test_dataset_fix.py  test_git_tools.py  test_htcondor_helpers.py  test_imports.py  test_ingest_report.py  test_isolated_branch_writes.py  test_make_review_synthesis.py  test_merge.py  test_optimize.py  test_optimize_bad_toa_selection.py  test_orbits_and_analysis.py  test_param_scan.py  test_parsers_and_reports.py  test_pipeline_fix_defaults.py  test_pipeline_fix_qc_validation.py  test_pipeline_snapshot_integration.py  test_plk_parser.py  test_pqc_boundary.py  test_public_release_compare.py  test_qc_cross_pulsar.py  test_qc_integration.py  test_qc_review.py  test_qc_review_gui_helpers.py  test_reference_dataset_tools.py  test_release_quality_report.py  test_run_report.py  test_system_flag_canonicalization.py  test_timfile_parser.py  (+6 more)
(+155 files in other folders)
