[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pleb"
version = "0.1.0"
description = "PTA residual quality-control toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9",
  "tomlkit>=0.12",
  "tomli>=2.0",
]

[project.optional-dependencies]
libstempo = ["libstempo"]
plot = ["matplotlib>=3.6"]
dev = ["pytest"]
qc = ["pqc", "libstempo"]
gui = ["streamlit>=1.30", "jsonschema>=4.21"]

[project.scripts]
pleb = "pleb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pleb*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["notebooks"]
