[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pleb"
dynamic = ["version"]
description = "PTA residual quality-control toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Golam Mohiuddin Shaifullah"}]
urls = {Repository = "https://github.com/golamshaifullah/pleb", Mirror = "https://gitlab.in2p3.fr/epta/pleb", Documentation = "https://github.com/golamshaifullah/pleb"}
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9",
  "tomlkit>=0.12",
  "tomli>=2.0",
]

[project.optional-dependencies]
libstempo = ["libstempo"]
plot = ["matplotlib>=3.6"]
dev = ["pytest", "black", "ruff"]
qc = ["pqc", "libstempo"]
gui = ["streamlit>=1.30", "jsonschema>=4.21"]

[project.scripts]
pleb = "pleb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pleb*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["notebooks"]

[tool.black]
line-length = 88

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
