[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pleb"
dynamic = ["version"]
description = "The EPTA data combination pipeline for ingest, fitting, and QA/QC."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Golam Mohiuddin Shaifullah"}]
urls = {Repository = "https://github.com/golamshaifullah/pleb", Mirror = "https://gitlab.in2p3.fr/epta/pleb", Documentation = "https://golamshaifullah.github.io/pleb/"}
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
  "scipy>=1.9",
  "astropy>=6.0",
  "matplotlib>=3.6",
  "PyYAML>=6.0",
  "tomlkit>=0.12",
  "tomli>=2.0",
]

[project.optional-dependencies]
libstempo = ["libstempo"]
plot = ["matplotlib>=3.6"]
dev = ["pytest", "black", "ruff"]
qc = ["pqc", "libstempo"]
gui = ["streamlit>=1.30", "jsonschema>=4.21", "plotly>=5.0"]

[project.scripts]
pleb = "pleb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pleb*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: integration-level tests for CLI modes and runtime wiring",
]

[tool.ruff]
extend-exclude = ["notebooks", "donezip"]

[tool.black]
line-length = 88

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
